ignoring unknown placeholders